namespace Blog.Domain.Enums;

public enum ImageFormat
{
    Jpeg,
    Png,
    WebP,
    Avif
}
